--- a/FinalProjectWordCloud.ipynb
+++ b/FinalProjectWordCloud.ipynb
@@ -1,5 +1,5 @@
 
-    "# Here are all the installs and imports you will need for your word cloud script and uploader widget\n",
+    "# Here are all the installs and imports I will need for the word cloud script and uploader widget\n",
     "\n",
     "!pip install wordcloud\n",
     "!pip install fileupload\n",
